fix `?` not aligned with label in mobile (stage 3)

--- a/src/newSeed/baseStage.scss
+++ b/src/newSeed/baseStage.scss
@@ -582,6 +582,9 @@
         margin-bottom: 5px;
       }
     }
+    .labeledQuestion {
+      margin-bottom: 5px;
+    }
     > .heading.heading2 {
       font-size: 26px;
     }
